jvm: handle promotion fail